@@ -1,4 +1,5 @@
 Version 1.0.1 (not yet released):
+- Move check for delivery information from main() into check_account().
 - Added support for %U and %H expansion in UIDLS file names. This allows to 
   have per-account UIDLS files with just one setting in the defaults
   section. The default UIDLS file name was not changed yet to keep
